force-app/main/default/objects/clofor_com_cfs__Transit__c/clofor_com_cfs__Transit__c.object-meta.xml
<CustomObject>
    <label>積替</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>TRANSIT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>