force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__Consolidation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Consolidation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONSOLIDATION ID</label>
    <referenceTo>clofor_com_cfs__MasterAnken__c</referenceTo>
    <relationshipLabel>TRANSIT</relationshipLabel>
    <relationshipName>TRANSIT</relationshipName>
    <type>Lookup</type>
</CustomField>