force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__CONTAINER_MODE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CONTAINER_MODE__c</fullName>
    <label>CONTAINER MODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCL-FCL</fullName>
                <default>true</default>
                <label>FCL-FCL</label>
            </value>
            <value>
                <fullName>LCL-LCL</fullName>
            </value>
            <value>
                <fullName>FCL-LCL</fullName>
            </value>
            <value>
                <fullName>LCL-FCL</fullName>
            </value>
            <value>
                <fullName>AIR-AIR</fullName>
            </value>
            <value>
                <fullName>FCL-AIR</fullName>
            </value>
            <value>
                <fullName>AIR-FCL</fullName>
            </value>
            <value>
                <fullName>LCL-AIR</fullName>
            </value>
            <value>
                <fullName>AIR-LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>