force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__CreateTransit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreateTransit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Transit</label>
    <type>Checkbox</type>
</CustomField>