force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__Days_after_ETD_at_Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Days_after_ETD_at_Transit_Port__c</fullName>
    <formula>TODAY() - clofor_com_cfs__ETDAtTransitPort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days after ETD at Transit Port</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>