force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__ETDAtTransitPort__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ETDAtTransitPort__c</fullName>
    <label>ETD AT TRANSIT PORT</label>
    <type>Date</type>
</CustomField>