force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__InOrderOfTransit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InOrderOfTransit__c</fullName>
    <label>IN ORDER OF TRANSIT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>