force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__MasterCarrierConsolidator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MasterCarrierConsolidator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MASTER CARRIER/CONSOLIDATOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRANSIT (MASTER CARRIER/CONSOLIDATOR)</relationshipLabel>
    <relationshipName>MasterCarrierAirliner</relationshipName>
    <type>Lookup</type>
</CustomField>