force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__ShipmentOrder__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipmentOrder__c</fullName>
    <label>SHIPMENT ORDER</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>TRANSIT</relationshipLabel>
    <relationshipName>TRANSIT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>