force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__ShipperBeforeSwitch__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipperBeforeSwitch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper Before Switch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRANSIT (SHIPPER BEFORE SWITCH)</relationshipLabel>
    <relationshipName>ShipperBeforeSwitch</relationshipName>
    <type>Lookup</type>
</CustomField>