force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__SwitchHBL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SwitchHBL__c</fullName>
    <label>SWITCH H B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>