force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__SwitchMBLNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SwitchMBLNumber__c</fullName>
    <label>SWITCH M B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>