force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__TransitVesselFlight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransitVesselFlight__c</fullName>
    <label>TRANSIT VESSEL/FLIGHT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>