force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/clofor_com_cfs__TransitVoyage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransitVoyage__c</fullName>
    <label>Transit Voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>