force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/Flow_Validation_2__c.field-meta.xml
<CustomField>
    <fullName>Flow_Validation_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Validation 2</label>
    <type>Checkbox</type>
</CustomField>