force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/Flow_Validation__c.field-meta.xml
<CustomField>
    <fullName>Flow_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Validation</label>
    <type>Checkbox</type>
</CustomField>