force-app/main/default/objects/clofor_com_cfs__Transit__c/fields/get_ETA_Shipment__c.field-meta.xml
<CustomField>
    <fullName>get_ETA_Shipment__c</fullName>
    <formula>clofor_com_cfs__ShipmentOrder__r.clofor_com_cfs__ETA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>get ETA(Shipment)</label>
    <type>Date</type>
</CustomField>