force-app/main/default/objects/clofor_com_cfs__Transit__c/recordTypes/clofor_com_cfs__ConsolidationTransit.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ConsolidationTransit</fullName>
    <active>false</active>
    <description>To manage Transit related with Consolidation</description>
    <label>CONSOLIDATION TRANSIT</label>
</RecordType>