force-app/main/default/objects/clofor_com_cfs__Transit__c/recordTypes/clofor_com_cfs__ShipmentOrderTransit.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ShipmentOrderTransit</fullName>
    <active>true</active>
    <description>To manage Transit related with Shipment Order</description>
    <label>SHIPMENT ORDER TRANSIT</label>
</RecordType>