force-app/main/default/objects/clofor_com_cfs__Transit__c/validationRules/PreventEditInOrderOfTransit.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventEditInOrderOfTransit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED(clofor_com_cfs__InOrderOfTransit__c))</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__InOrderOfTransit__c</errorDisplayField>
    <errorMessage>Cant change value for this field</errorMessage>
</ValidationRule>