force-app/main/default/objects/clofor_com_cfs__Transit__c/validationRules/PreventUserCreateWrongTimeInTransit.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserCreateWrongTimeInTransit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

NOT(ISBLANK(clofor_com_cfs__ETAAtTransitPort__c)),
NOT(ISBLANK(clofor_com_cfs__ETDAtTransitPort__c)),

 

 clofor_com_cfs__ETAAtTransitPort__c &gt;  clofor_com_cfs__ETDAtTransitPort__c 


 
)</errorConditionFormula>
    <errorMessage>ETD must be higher than ETA. Please re-enter.</errorMessage>
</ValidationRule>