force-app/main/default/objects/clofor_com_cfs__Transit__c/validationRules/PreventUserCreateWrongTimeInTransitFlow.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserCreateWrongTimeInTransitFlow</fullName>
    <active>true</active>
    <errorConditionFormula>Flow_Validation__c</errorConditionFormula>
    <errorMessage>The ETA and ETD dates of the transit must be within the range of the ETA and ETD dates of the shipment and must not coincide with other transits. Please re-enter.</errorMessage>
</ValidationRule>