force-app/main/default/objects/clofor_com_cfs__Transit__c/validationRules/SetFlowValidationDefault.validationRule-meta.xml
<ValidationRule>
    <fullName>SetFlowValidationDefault</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Flow_Validation__c )</errorConditionFormula>
    <errorMessage>The ETA and ETD dates coincide with the old transit. Please re-enter</errorMessage>
</ValidationRule>