force-app/main/default/objects/clofor_com_cfs__Transit__c/validationRules/SetFlowValidationDefault2.validationRule-meta.xml
<ValidationRule>
    <fullName>SetFlowValidationDefault2</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Flow_Validation_2__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__ETDAtTransitPort__c</errorDisplayField>
    <errorMessage>Let check again!</errorMessage>
</ValidationRule>