force-app/main/default/objects/clofor_com_cfs__Transit__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ShipmentOrder__c</columns>
    <columns>clofor_com_cfs__Consolidation__c</columns>
    <columns>clofor_com_cfs__InOrderOfTransit__c</columns>
    <columns>clofor_com_cfs__TransitPort__c</columns>
    <columns>clofor_com_cfs__ETAAtTransitPort__c</columns>
    <columns>clofor_com_cfs__ETDAtTransitPort__c</columns>
    <columns>clofor_com_cfs__TransitVesselFlight__c</columns>
    <columns>clofor_com_cfs__LengthOfStaysForTransitPort__c</columns>
    <columns>clofor_com_cfs__CONTAINER_MODE__c</columns>
    <columns>clofor_com_cfs__HandlingAgentAtTransit__c</columns>
    <columns>clofor_com_cfs__MasterCarrierConsolidator__c</columns>
    <columns>clofor_com_cfs__CarrierCode__c</columns>
    <columns>clofor_com_cfs__SwitchHBL__c</columns>
    <columns>clofor_com_cfs__SwitchMBLNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>